-all screens have been added, many empty though -swipe screen added -dropdown menus on newCook slightly working -does contain some unused screens which can be confusing (sorry)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,13 @@
         </activity>
         <activity android:name=".PreviousCooks" >
         </activity>
-        <activity android:name=".Results" >
-        </activity>
         <activity android:name=".TimeScreen" >
         </activity>
         <activity android:name=".GraphScreen" >
+        </activity>
+        <activity android:name=".Results2" >
+        </activity>
+        <activity android:name=".NewCook1" >
         </activity>
     </application>
 
