--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile files('D:/Jacob/AndroidStudioProjects/HeaterMeater_LoveHertz/.idea/libraries/GraphView-4.0.1.jar')
+    compile files('D:/Jacob/AndroidStudioProjects/HeaterMeater_LoveHertz/.idea/libraries/java_websocket.jar')
 }
